# cerebral

./: .gitignore  README.rst
liszt/: CMakeLists.txt  README.rst
liszt/core/db/postgres/: Attribute.h  Driver.h  Relation.h  Scanner.h  Value.h
liszt/core/model/: elm.cpp  elm.cu  elm.cu.bak  elm.cu.bak2  elm.h  mlp.h
liszt/core/model/elm/gpu/: elm_gpu.h
liszt/core/model/mlp/common/: ExampleSet.cpp  ExampleSet.h  types.h
liszt/core/model/mlp/cpu/: HostExampleSet.cpp  HostExampleSet.h
liszt/core/model/mlp/gpu/: DeviceExampleSet.cu  DeviceExampleSet.h
liszt/core/nn/: activator.h  errors.h
liszt/core/nn/kernel/: activator.cu  activator.h  cost.cu  cost.h  gpu_settings.h  initializer.cu  initializer.h  operator.h
liszt/core/nn/kernel/matrix/: matrixMultiply.cu
liszt/core/nn/math/: matrix_gpu.h
liszt/core/ops/io/: model_saver.h
liszt/core/util/: matrix_processor.h
liszt/core/utils/: matrix_printer.h
liszt/data/cifar10/: README.rst
liszt/data/mnist/: README.rst
liszt/examples/iris/: iris_cpu_mlp.cpp  iris_gpu_mlp.cpp
liszt/examples/mnist/: activator.h  errors.h  graph.h  init_params.h  mlp.h  mnist.cpp  preprocessor.h  settings.h  test.h  train.h  train_mlp.h
liszt/examples/mnist/bak/: train.cpp
liszt/examples/mnist/models/: test_elm.h  test_mlp.h  train_elm.h
liszt/examples/regression/: process.h  reg.cpp
liszt/lib/eigen/: .hg_archival.txt
requirements/: ubuntu.sh
veritas/: CMakeLists.txt
